Вносит правки в ДЗ

--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@
                 <address>
                     <ul class="footer__list">
                         <li class="footer__text">г. Киев, пр-т Леси Украинки, 26</li>
-                        <li><a class="footer__contact" href="mailto:info@example.com">info@example.com</a></li>
-                        <li><a class="footer__contact footer__contact--position" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                        <li><a class="footer__item" href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a class="footer__item footer__item--position" href="tel:+380991111111">+38 099 111 11 11</a></li>
                     </ul>
                 </address>
             </div>
